--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ hyphora-local = "hyphora_local:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "basedpyright>=1.29.5",
+    "ruff>=0.12.2",
+]
